change page name

--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Generative Design</title>
+    <title>art.random()</title>
     <script src="../libraries/p5.js"></script>
     <script src="../libraries/p5.svg.js"></script>
   </head>
